Added new icons and translations